--- a/chatbot/src/App.css
+++ b/chatbot/src/App.css
@@ -13,7 +13,7 @@ body {
   background: black;
 }
 .container {
-  border: 1px solid #333333;
+  border: 3px solid #2c3494;
   border-radius: 20px;
   width: 50%;
   margin: 0 auto;
