--- a/chatbot/src/App.css
+++ b/chatbot/src/App.css
@@ -122,6 +122,7 @@ body {
   background: #f2f2f2;
   color: #adb7bf;
   color: black;
+  border-bottom: .5px solid #2c3494;
 }
 .output button {
   outline: none;
