--- a/chatbot/src/App.css
+++ b/chatbot/src/App.css
@@ -105,7 +105,7 @@ body {
   /* margin-bottom: 0.4em; */
   background: #edf4f6;
   background: transparent;
-  box-shadow: 0 -1px 1px #e7eaed;
+  /* box-shadow: 0 -1px 1px #e7eaed; */
   padding: 0.4em;
   border-radius: 10px;
   border-bottom: .5px solid #2c3494;
